--- a/SharpEditor/Documentation/DocumentationWindow.axaml
+++ b/SharpEditor/Documentation/DocumentationWindow.axaml
@@ -9,10 +9,11 @@
 		Width="700" Height="600"
 		Icon="/Images/Icon.ico"
 		x:Class="SharpEditor.Documentation.DocumentationWindow"
-		Background="#424245"
-		Foreground="White"
+		Background="{StaticResource ThemeControlMidHighBrush}"
+		Foreground="{StaticResource ThemeForegroundBrush}"
 		FontSize="13"
-		FontFamily="{StaticResource ApplicationFont}">
+		FontFamily="{StaticResource ApplicationFont}"
+		Classes="documentation">
 
 	<Window.KeyBindings>
 		<KeyBinding Gesture="Up" Command="{Binding LineUpCommand}"/>
@@ -22,8 +23,6 @@
 	</Window.KeyBindings>
 	
 	<Window.Styles>
-		<StyleInclude Source="/AppStyles.axaml"/>
-
 		<Style Selector="TextBlock">
 			<Setter Property="FontSize" Value="13.5"/> <!-- x1.0 -->
 		</Style>
@@ -48,10 +47,14 @@
 		<Style Selector="TextBlock.h7">
 			<Setter Property="FontSize" Value="14.85"/> <!-- x1.1 -->
 		</Style>
+
+		<Style Selector="Border.codeBorder">
+			<Setter Property="Background" Value="{StaticResource ThemeBackgroundBrush}"/>
+		</Style>
 	</Window.Styles>
 		
 	<DockPanel>
-		<Grid DockPanel.Dock="Top" Background="#2d2d30">
+		<Grid DockPanel.Dock="Top" Classes="toolbar" Background="{StaticResource ThemeControlMidBrush}">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
@@ -60,19 +63,17 @@
 				<ColumnDefinition Width="*"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Button Grid.Column="0" Command="{Binding BackCommand}" Margin="0,2"
-					><!--IsEnabled="{Binding navigationServive.CanGoBack, Mode=OneWay}"-->
-				<Image Source="../Images/Previous.png" Height="32"/>
+			<Button Grid.Column="0" Command="{Binding BackCommand}" Margin="0,2">
+				<ContentControl Classes="prevIcon"/>
 			</Button>
-			<Button Grid.Column="1" Command="{Binding ForwardCommand}" Margin="0,2"
-					><!--IsEnabled="{Binding navigationServive.CanGoForward, Mode=OneWay}"-->
-				<Image Source="../Images/Next.png" Height="32"/>
+			<Button Grid.Column="1" Command="{Binding ForwardCommand}" Margin="0,2">
+				<ContentControl Classes="nextIcon"/>
 			</Button>
 			<Button Grid.Column="2" Command="{Binding HomeCommand}" Margin="4,2">
-				<Image Source="../Images/Home.png" Height="32"/>
+				<ContentControl Classes="homeIcon"/>
 			</Button>
 			<Button Grid.Column="3" Command="{Binding RefreshCommand}" Margin="0,2">
-				<Image Source="../Images/Refresh.png" Height="32"/>
+				<ContentControl Classes="refreshIcon"/>
 			</Button>
 			<TextBlock Grid.Column="5" Name="TitleTextBlock"
 				Text="Title" VerticalAlignment="Center" Padding="0,0,10,0" Margin="5,0,20,0"/>
