--- a/SharpEditor/SettingsStyles.axaml
+++ b/SharpEditor/SettingsStyles.axaml
@@ -22,7 +22,7 @@
 
 	<Style Selector="HeaderedContentControl">
 		<Setter Property="Background" Value="Transparent" />
-		<Setter Property="BorderBrush" Value="White" />
+		<Setter Property="BorderBrush" Value="{StaticResource ThemeForegroundBrush}" />
 		<Setter Property="BorderThickness" Value="1" />
 		<Setter Property="Padding" Value="3" />
 
@@ -73,7 +73,7 @@
 		</Setter>
 
 		<Style Selector="^.settings">
-			<Setter Property="Background" Value="#424245"/>
+			<Setter Property="Background" Value="{StaticResource ThemeControlMidHighBrush}"/>
 			<Setter Property="Margin" Value="10"/>
 		</Style>
 
@@ -152,7 +152,7 @@
 	</Style>
 
 	<Style Selector="Button">
-		<Setter Property="Background" Value="#2d2d30" />
+		<Setter Property="Background" Value="{StaticResource ThemeControlMidBrush}" />
 		<Setter Property="BorderBrush" Value="{DynamicResource ThemeBorderLowBrush}" />
 		<Setter Property="BorderThickness" Value="{DynamicResource ThemeBorderThickness}" />
 		<Setter Property="Foreground" Value="{DynamicResource ThemeForegroundBrush}" />
@@ -185,6 +185,16 @@
 		<Style Selector="^:disabled">
 			<Setter Property="Opacity" Value="{DynamicResource ThemeDisabledOpacity}" />
 		</Style>
+	</Style>
+
+	<Style Selector="TextBox">
+		<Setter Property="Background" Value="{StaticResource ThemeControlLowBrush}"/>
+		<Setter Property="Foreground" Value="{StaticResource ThemeForegroundLowBrush}"/>
+		<Setter Property="BorderThickness" Value="1"/>
+		<!--<Setter Property="BorderBrush" Value="{StaticResource ThemeControlLowBrush}"/>-->
+		<Setter Property="VerticalContentAlignment" Value="Center"/>
+		<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
+		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
 	</Style>
 	
 </Styles>
