--- a/SharpEditor/Windows/ToolbarMessageBox.axaml
+++ b/SharpEditor/Windows/ToolbarMessageBox.axaml
@@ -11,7 +11,7 @@
 	<StackPanel Name="MessagePanel" IsVisible="False" Orientation="Horizontal" IsHitTestVisible="False">
 		<Border Background="Transparent">
 			<StackPanel Orientation="Horizontal">
-				<TextBlock Name="MessageText" Foreground="LightGray" VerticalAlignment="Center" Margin="0,0,5,0"/>
+				<TextBlock Name="MessageText" Foreground="{StaticResource ThemeForegroundLowBrush}" VerticalAlignment="Center" Margin="0,0,5,0"/>
 			</StackPanel>
 		</Border>
 		<Popup x:Name="MessagePopup"
@@ -20,11 +20,11 @@
 				IsOpen="False" IsLightDismissEnabled="True"
 				Width="200" Height="200">
 			<!-- StaysOpen="False" -->
-			<Border Background="#2d2d30" MaxWidth="400" MaxHeight="500">
+			<Border Background="{StaticResource ThemeControlMidbrush}" MaxWidth="400" MaxHeight="500">
 				<ListBox Name="MessagePopupListBox"
 					ScrollViewer.VerticalScrollBarVisibility="Auto"
 					ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-					Background="#2d2d30">
+					Background="{StaticResource ThemeControlMidbrush}">
 
 					<ListBox.ItemTemplate>
 						<DataTemplate x:DataType="local:ToolbarMessage">
@@ -35,7 +35,7 @@
 								<TextBlock Grid.Column="0"
 									Text="{Binding Message, Mode=OneWay}"
 									Margin="5"
-									Foreground="LightGray"
+									Foreground="{StaticResource ThemeForegroundLowBrush}"
 									TextWrapping="Wrap"/>
 							</Grid>
 						</DataTemplate>
