Custom ItemDragBehavior implementation for WrapPanel ItemsPresenter.
The Avalonia.Xaml.Interactivity default implementation of ItemDragBehavior replaces (in the associated Style) the WrapPanel for the TabControl item headers with a StackPanel. The changes to ItemDragBehavior.PointerMoved allow for multiple rows of headers, and the associated Style has been altered so as not to replace the ItemsPresenter panel. The implementation is a little messy, and could possibly be streamlined, but functions adequately so far. Other than PointerMoved, the class has not been changed substantially.

--- a/SharpEditor/AppStyles.axaml
+++ b/SharpEditor/AppStyles.axaml
@@ -369,6 +369,43 @@
 		</Setter>
 	</Style>
 
+	<Style Selector="TabControl.fileTabs">
+		<Setter Property="Padding" Value="0" />
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Padding="{TemplateBinding Padding}"
+						HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+						VerticalAlignment="{TemplateBinding VerticalAlignment}"
+						Background="{TemplateBinding Background}"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						CornerRadius="{TemplateBinding CornerRadius}">
+					<DockPanel>
+						<ItemsPresenter Name="PART_ItemsPresenter"
+										ItemsPanel="{TemplateBinding ItemsPanel}"
+										DockPanel.Dock="{TemplateBinding TabStripPlacement}"/>
+						<ContentPresenter Name="PART_SelectedContentHost"
+										  Margin="{TemplateBinding Padding}"
+										  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+										  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+										  Content="{TemplateBinding SelectedContent}"
+										  ContentTemplate="{TemplateBinding SelectedContentTemplate}" />
+					</DockPanel>
+				</Border>
+			</ControlTemplate>
+		</Setter>
+
+		<Style Selector="^[TabStripPlacement=Left] /template/ ItemsPresenter#PART_ItemsPresenter > WrapPanel">
+			<Setter Property="Orientation" Value="Vertical" />
+		</Style>
+		<Style Selector="^[TabStripPlacement=Right] /template/ ItemsPresenter#PART_ItemsPresenter > WrapPanel">
+			<Setter Property="Orientation" Value="Vertical" />
+		</Style>
+		<Style Selector="^[TabStripPlacement=Top] /template/ ItemsPresenter#PART_ItemsPresenter">
+			<Setter Property="Margin" Value="{DynamicResource TabControlTopPlacementItemMargin}" />
+		</Style>
+	</Style>
+
 	<Style Selector="TabItem">
 		<Setter Property="Background" Value="Transparent"/>
 		<Setter Property="FontSize" Value="{DynamicResource ApplicationFontSize}"/> <!-- Better solution? -->
