--- a/SharpEditor/AppStyles.axaml
+++ b/SharpEditor/AppStyles.axaml
@@ -370,7 +370,7 @@
 	</Style>
 
 	<Style Selector="TabControl.fileTabs">
-		<Setter Property="Padding" Value="0" />
+		<Setter Property="Padding" Value="0"/>
 		<Setter Property="Template">
 			<ControlTemplate>
 				<Border Padding="{TemplateBinding Padding}"
@@ -389,20 +389,20 @@
 										  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
 										  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
 										  Content="{TemplateBinding SelectedContent}"
-										  ContentTemplate="{TemplateBinding SelectedContentTemplate}" />
+										  ContentTemplate="{TemplateBinding SelectedContentTemplate}"/>
 					</DockPanel>
 				</Border>
 			</ControlTemplate>
 		</Setter>
 
 		<Style Selector="^[TabStripPlacement=Left] /template/ ItemsPresenter#PART_ItemsPresenter > WrapPanel">
-			<Setter Property="Orientation" Value="Vertical" />
+			<Setter Property="Orientation" Value="Vertical"/>
 		</Style>
 		<Style Selector="^[TabStripPlacement=Right] /template/ ItemsPresenter#PART_ItemsPresenter > WrapPanel">
-			<Setter Property="Orientation" Value="Vertical" />
+			<Setter Property="Orientation" Value="Vertical"/>
 		</Style>
 		<Style Selector="^[TabStripPlacement=Top] /template/ ItemsPresenter#PART_ItemsPresenter">
-			<Setter Property="Margin" Value="{DynamicResource TabControlTopPlacementItemMargin}" />
+			<Setter Property="Margin" Value="{DynamicResource TabControlTopPlacementItemMargin}"/>
 		</Style>
 	</Style>
 
@@ -798,6 +798,82 @@
 
 	</Style>
 
+	<Style Selector=":is(Popup) ScrollBar, :is(Control).minorScroll ScrollBar">
+
+		<Setter Property="Cursor" Value="Arrow"/>
+
+		<Style Selector="^:horizontal">
+			<Setter Property="Height" Value="{DynamicResource ScrollBarMinorThickness}"/>
+			<Setter Property="Template">
+				<ControlTemplate>
+					<Border Background="{DynamicResource ThemeControlMidBrush}"
+							UseLayoutRounding="False">
+						<Grid ColumnDefinitions="*">
+							<Track Maximum="{TemplateBinding Maximum}"
+								   Minimum="{TemplateBinding Minimum}"
+								   Orientation="{TemplateBinding Orientation}"
+								   ViewportSize="{TemplateBinding ViewportSize}"
+								   DeferThumbDrag="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
+								   Value="{TemplateBinding Value,
+											 Mode=TwoWay}">
+								<Thumb Name="thumb"/>
+							</Track>
+						</Grid>
+					</Border>
+				</ControlTemplate>
+			</Setter>
+		</Style>
+		<Style Selector="^:vertical">
+			<Setter Property="Width" Value="{DynamicResource ScrollBarMinorThickness}"/>
+			<Setter Property="Template">
+				<ControlTemplate>
+					<Border Background="{DynamicResource ThemeControlMidBrush}"
+							UseLayoutRounding="False">
+						<Grid RowDefinitions="*">
+							<Track Grid.Row="1"
+								   Grid.Column="1"
+								   IsDirectionReversed="True"
+								   Maximum="{TemplateBinding Maximum}"
+								   Minimum="{TemplateBinding Minimum}"
+								   Orientation="{TemplateBinding Orientation}"
+								   ViewportSize="{TemplateBinding ViewportSize}"
+								   DeferThumbDrag="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
+								   Value="{TemplateBinding Value,
+											 Mode=TwoWay}">
+								<Thumb Name="thumb"/>
+							</Track>
+						</Grid>
+					</Border>
+				</ControlTemplate>
+			</Setter>
+		</Style>
+		<Style Selector="^ /template/ Thumb#thumb">
+			<Setter Property="Background" Value="{DynamicResource ThemeControlMidHighBrush}"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate>
+						<Border Background="{TemplateBinding Background}"/>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		<Style Selector="^ /template/ Thumb#thumb:pointerover">
+			<Setter Property="Background" Value="{DynamicResource ThemeControlHighBrush}"/>
+		</Style>
+		<Style Selector="^ /template/ Thumb#thumb:pressed">
+			<Setter Property="Background" Value="{DynamicResource ThemeControlVeryHighBrush}"/>
+		</Style>
+		<Style Selector="^:horizontal /template/ Thumb#thumb">
+			<Setter Property="MinWidth" Value="{DynamicResource ScrollBarMinorThickness}"/>
+			<Setter Property="Height" Value="{DynamicResource ScrollBarMinorThumbThickness}"/>
+		</Style>
+		<Style Selector="^:vertical /template/ Thumb#thumb">
+			<Setter Property="MinHeight" Value="{DynamicResource ScrollBarMinorThickness}"/>
+			<Setter Property="Width" Value="{DynamicResource ScrollBarMinorThumbThickness}"/>
+		</Style>
+
+	</Style>
+
 	<Style Selector="ToggleButton.errorPopupToggleButton">
 
 		<Setter Property="Background" Value="Transparent"/>
@@ -855,6 +931,30 @@
 	<Style Selector=":is(ListBox)">
 		<Setter Property="Background" Value="{DynamicResource ThemeControlLowBrush}"/>
 		<Setter Property="Padding" Value="0"/>
+
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Name="border"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						CornerRadius="{TemplateBinding CornerRadius}">
+					<ScrollViewer Name="PART_ScrollViewer" Classes="minorScroll"
+								  AllowAutoHide="{TemplateBinding (ScrollViewer.AllowAutoHide)}"
+								  BringIntoViewOnFocusChange="{TemplateBinding (ScrollViewer.BringIntoViewOnFocusChange)}"
+								  Background="{TemplateBinding Background}"
+								  HorizontalScrollBarVisibility="{TemplateBinding (ScrollViewer.HorizontalScrollBarVisibility)}"
+								  IsScrollChainingEnabled="{TemplateBinding (ScrollViewer.IsScrollChainingEnabled)}"
+								  IsDeferredScrollingEnabled="{TemplateBinding (ScrollViewer.IsDeferredScrollingEnabled)}"
+								  VerticalScrollBarVisibility="{TemplateBinding (ScrollViewer.VerticalScrollBarVisibility)}"
+								  VerticalSnapPointsType="{TemplateBinding (ScrollViewer.VerticalSnapPointsType)}"
+								  HorizontalSnapPointsType="{TemplateBinding (ScrollViewer.HorizontalSnapPointsType)}">
+						<ItemsPresenter Name="PART_ItemsPresenter"
+										Margin="{TemplateBinding Padding}"
+										ItemsPanel="{TemplateBinding ItemsPanel}"/>
+					</ScrollViewer>
+				</Border>
+			</ControlTemplate>
+		</Setter>
 	</Style>
 
 	<Style Selector="ListBoxItem">
