--- a/SharpEditor/ThemeResources.axaml
+++ b/SharpEditor/ThemeResources.axaml
@@ -157,6 +157,9 @@
 	<sys:Double x:Key="ScrollBarThickness">18</sys:Double>
 	<sys:Double x:Key="ScrollBarThumbThickness">14</sys:Double>
 
+	<sys:Double x:Key="ScrollBarMinorThickness">12</sys:Double>
+	<sys:Double x:Key="ScrollBarMinorThumbThickness">8</sys:Double>
+
 	<sys:Double x:Key="IconElementThemeHeight">16</sys:Double>
 	<sys:Double x:Key="IconElementThemeWidth">16</sys:Double>
 
