Add file icon to "New From Template" menu items.
File icons only added to terminal menu items (i.e. items which represent a template file, not items which represent a grouping of template files).

--- a/SharpEditor/Windows/SharpEditorWindow.axaml
+++ b/SharpEditor/Windows/SharpEditorWindow.axaml
@@ -65,6 +65,15 @@
 							<Setter Property="Header" Value="{Binding Name}"/>
 							<Setter Property="Command" Value="{Binding ItemCommand}"/>
 							<Setter Property="ItemsSource" Value="{Binding MenuItems}"/>
+							<Style Selector="^:empty">
+								<Setter Property="Icon">
+									<Setter.Value>
+										<Template>
+											<ContentControl Classes="configIcon"/>
+										</Template>
+									</Setter.Value>
+								</Setter>
+							</Style>
 						</ControlTheme>
 					</MenuItem.ItemContainerTheme>
 				</MenuItem>
