Change icon styles to use filled icons for better cross-platform rendering.
Aliased icons were not rendering well on other systems, and so the icons have been switched to use filled geometries, which will hopefully improve the look of things on other machines. Also, an "open template" icon has been added to the File menu.

--- a/SharpEditor/Windows/SharpEditorWindow.axaml
+++ b/SharpEditor/Windows/SharpEditorWindow.axaml
@@ -83,7 +83,11 @@
 						<ContentControl Classes="openIcon"/>
 					</MenuItem.Icon>
 				</MenuItem>
-				<MenuItem Header="Open Template..." Click="OpenTemplateFileClick"/>
+				<MenuItem Header="Open Template..." Click="OpenTemplateFileClick">
+					<MenuItem.Icon>
+						<ContentControl Classes="openTemplateIcon"/>
+					</MenuItem.Icon>
+				</MenuItem>
 				<Separator/>
 				<MenuItem Header="Save" Command="{Binding SaveCommand}" InputGesture="Ctrl+S">
 					<MenuItem.Icon>
