Remove Images directory and move used files to Assets.
Most of the files in Images were no longer in use, and the two that were have been moved to appropriate directories inside Assets. Hopefully this is a bit neater.

--- a/SharpEditor/Documentation/DocumentationWindow.axaml
+++ b/SharpEditor/Documentation/DocumentationWindow.axaml
@@ -7,7 +7,7 @@
 		x:DataType="local:DocumentationWindow"
 		Title="Documentation" d:DesignWidth="700" d:DesignHeight="600"
 		Width="700" Height="600"
-		Icon="/Images/Icon.ico"
+		Icon="/Assets/Icons/Icon.ico"
 		x:Class="SharpEditor.Documentation.DocumentationWindow"
 		Background="{StaticResource ThemeControlMidHighBrush}"
 		Foreground="{StaticResource ThemeForegroundBrush}"
