--- a/SharpEditor/Windows/LoadingWindow.axaml
+++ b/SharpEditor/Windows/LoadingWindow.axaml
@@ -7,7 +7,7 @@
         d:DesignWidth="385" d:DesignHeight="200"
         Height="200" Width="385"
 		Title="Loading Sharp Sheets..."
-		Icon="/Images/Icon.ico"
+		Icon="/Assets/Icons/Icon.ico"
 		Background="#424245"
 		BorderThickness="0"
 		WindowStartupLocation="CenterScreen"
@@ -28,7 +28,7 @@
 			<TextBlock Grid.Column="2" Name="MessageTextBlock" Text="" Foreground="Gray" HorizontalAlignment="Right" Padding="0"/>
 		</Grid>
 		<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="12,2">
-			<Image Source="/Images/Logo.png" Height="150"/>
+			<Image Source="/Assets/Images/Logo.png" Height="150"/>
 			<TextBlock
 				Margin="0,20,0,0"
 				VerticalAlignment="Center"
